--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Mon Modèle 3D</title>
 </head>
 <body>test
-    <model-viewer src="teteglb.glb" camera-controls autoplay></model-viewer>
+    <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
 </body>
 </html>
