--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>test
     <model-viewer src="teteglb.glb" autoplay animation="autoplay" auto-rotate></model-viewer>
+    <model-viewer src="love.glb" autoplay animation="autoplay" auto-rotate></model-viewer>
 </body>
 </html>
