--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Mon Modèle 3D</title>
 </head>
 <body>test
-    <model-viewer src="teteglb.glb" autoplay animation="autoplay" auto-rotate></model-viewer>
-    <model-viewer src="love.glb" autoplay animation="autoplay" auto-rotate></model-viewer>
+    <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
+    test 2
+    <model-viewer src="love.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
 </body>
 </html>
