--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>test
     <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
     test 2
-    <model-viewer src="love.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
+    <model-viewer src="love.glb" camera-controls autoplay></model-viewer>
 </body>
 </html>
