--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>test
     <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
-    test 2
-    <model-viewer src="love.glb" camera-controls autoplay></model-viewer>
+    <p>test 2</p>
+    <model-viewer src="love.glb" camera-controls></model-viewer>
 </body>
 </html>
