--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
     <p>test 2</p>
     <model-viewer src="love.glb" camera-controls></model-viewer>
+    <p>test 3</p>
+    <model-viewer src="robot.glb" camera-controls></model-viewer>
 </body>
 </html>
