--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>test
     <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
-    <p>test 2</p>
+    <p>test 2ddddd</p>
     <model-viewer src="love.glb" camera-controls></model-viewer>
     <p>test 3</p>
     <model-viewer src="robot.glb" camera-controls></model-viewer>
