--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <model-viewer src="love.glb" camera-controls></model-viewer>
     <p>test 3</p>
     <model-viewer src="robot.glb" camera-controls></model-viewer>
-    <p>test 4</p>
-    <model-viewer src="3danimationglb.glb" camera-controls></model-viewer>
+    <p>test 4 changed</p>
+    <model-viewer src="3danimationglb.glb" camera-controls autoplay animation="autoplay"></model-viewer>
 </body>
 </html>
