--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         animate();
     </script>
     
-    test
+    test avec les points
     <model-viewer src="teteglb.glb" camera-controls autoplay animation="autoplay" auto-rotate></model-viewer>
     <p>test 2ddddd</p>
     <model-viewer src="love.glb" camera-controls></model-viewer>
